src/webapp/components/uiOptions/css/FatPanelUIOptions.css
/* Top bar and show/hide button */
.fl-uiOptions-fatPanel .fl-panelBar {
	width: 100%;
	height: 5px;
	background-color: #fff;
	border-bottom: 1px solid #ccc;	
}

.fl-uiOptions-fatPanel .fl-toggleButton {
	float:right;
	text-transform: uppercase;
	font-weight: bold;	
	border: 0px;
	background-color: white;	
	padding: 5px;
	margin-right: 10px;
	border-radius: 8px;	
	border-bottom: 1px solid #ccc;
}

/* IFrame */
.fl-uiOptions-fatPanel-iframe {
    border: 0;
    background-color: #fff;
}

/* Theming */
.fl-theme-hc .fl-uiOptions-fatPanel .fl-panelBar, 
.fl-theme-hc .fl-uiOptions-fatPanel .fl-toggleButton { background-color: #fff; border-color: #000; }

.fl-theme-hci .fl-uiOptions-fatPanel .fl-panelBar, 
.fl-theme-hci .fl-uiOptions-fatPanel .fl-toggleButton { background-color: #000; border-color: #fff; color: #fff; }

.fl-theme-blackYellow .fl-uiOptions-fatPanel .fl-panelBar, 
.fl-theme-blackYellow .fl-uiOptions-fatPanel .fl-toggleButton { background-color: #FFFF00; border-color: #000; }

.fl-theme-yellowBlack .fl-uiOptions-fatPanel .fl-panelBar, 
.fl-theme-yellowBlack .fl-uiOptions-fatPanel .fl-toggleButton { background-color: #000; border-color: #ffff00; color: #ffff00 }

